# url_encor

./: Cargo.toml  LICENSE  README.md
src/: encoder.rs  implementations.rs  lib.rs  main.rs  preprocessing.rs
tests/: integration_tests.rs
